<resources>
    <string name="app_name">Educación Superior</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="entrar">Ingresar</string>
    <string name="olvido_sucontrasena"><u>Olvidaste tu Contraseña</u></string>
    <string name="bienvenida">Bienvenid@</string>
    <string name="tu_correo">Tu Correo Electrónico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matematicas">Matematicas</string>
    <string name="sociales">Sociales</string>
    <string name="que_hacer_hoy">¿Que Vamos a Hacer Hoy?</string>
    <string name="Preicfes">Preicfes</string>
    <string name="simulcaro">Simulacro</string>
    <string name="que_materia">¿QUE MATERIA?</string>
    <string name="pregunta_n">PREGUNTA 1</string>
    <string name="respuesta_n">Respuesta</string>
    <string name="siguiente">Siguiente pregunta</string>
    <string name="lo_que_debes_saber">LO QUE DEBES SABER</string>
    <string name="proque">PORQUE:</string>
    <string name="la_respuesta_es_correcta">LA RESPUESTA ES CORRECTA</string>
    <string name="entendido">entendido</string>
    <string name="ir">IR</string>
    <string name="textoPregunta">Sin embargo, si el texto se ajusta a varias líneas, el texto aún estaría alineado a la izquierda dentro del TextView. Agregar el siguiente atributo hace que el texto real se alinee a la derecha (irregular a la izquierda) dentro de TextView:</string>
    <string name="res_incorrecta">LA RESPUESTA ES INCORRECTA</string>
    <string name="debiste_responder">DEBISTE RESPONDER</string>
    <string name="title_activity_main_registro">MainRegistro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Texto de registro persona-->
    <string name="titulo_registro">Registre sus datos personales </string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="title_registro2">Registre su usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="conf_contrasena">Confirmar contraseña</string>

    <!--Texto usable en cualquier sitio-->
    <string name="siguiente_item">Siguiente</string>
    <string name="registrate">Regístrate</string>
    <string name="sms_salir">¿Está seguro que desea salir?</string>
    <string name="sms_saliendo">Saliendo de la apliación</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="advertencia">Advertencia</string>
    <string name="layout_bahavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500</string>
    <string name="acceder">Acceder</string>
    <string name="toolbar_style">"@style/ThemeOverlay.AppCompat.Dark.ActionBar"</string>
    <!--Valores Preicfes-->



</resources>