<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragmentRegistro"
    android:background="@drawable/fondo1">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="10"
            android:shadowColor="@color/white"
            android:textSize="@dimen/font_size_title2"
            android:text="@string/titulo_registro"
            app:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/m_8"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_16"
            android:hint="@string/nombres"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInput"
                android:id="@+id/ti_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_16"
            android:hint="@string/apellidos"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInput"
                android:id="@+id/ti_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_16">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInput"
                android:id="@+id/ti_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/fecha_nacimiento"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente_item"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>