<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialogs.TeoriaFragment"
    android:layout_centerVertical="true"
    android:background="@color/azul_claro">
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_loquedbsaber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lo_que_debes_saber"
                android:layout_marginTop="@dimen/m_top"
                android:textSize="@dimen/font_size_buttons"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_margin="@dimen/m_16"/>

           <ScrollView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:gravity="center"
                       android:textColor="@color/black"
                       android:id="@+id/tv_teoria"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/textoPregunta"
                       android:padding="@dimen/m_16"
                       android:layout_margin="@dimen/m_16"
                       android:textSize="@dimen/font_size_text"
                       />
               </LinearLayout>
           </ScrollView>

            <Button
                android:id="@+id/btn_entendido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/m_16"
                android:text="@string/entendido" />
        </LinearLayout>
</RelativeLayout>