<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/layout_bahavior">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Title"
                android:id="@+id/tv_title_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sociales"/>

            <TextView
                style="@style/Subtitle"
                android:id="@+id/title_pregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_area"
                android:text="@string/pregunta_n"/>

            <TextView
                android:id="@+id/tv_pregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_pregunta"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/m_16"
                android:background="@drawable/shape_round"
                android:gravity="start"
                android:padding="@dimen/m_16"
                android:text="@string/textoPregunta"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_text2" />

            <RadioGroup
                android:id="@+id/respuestas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pregunta"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/m_16"
                android:layout_marginTop="@dimen/m_16"
                android:layout_marginEnd="@dimen/m_16"
                android:layout_marginBottom="@dimen/m_16"
                android:background="@drawable/shape_round"
                android:gravity="center">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewAnswers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RadioGroup>

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/respuestas"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:padding="@dimen/m_8"
                app:columnCount="2"
                app:rowCount="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m_8"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_baseline_help_24"
                        android:layout_marginEnd="@dimen/m_8"
                        app:iconSize="@dimen/m_50"
                        android:backgroundTint="@color/teal_700"
                        app:iconTint="@color/purple_500"/>

                    <com.google.android.material.button.MaterialButton
                        style="@style/Button"
                        android:id="@+id/btn_siguiente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siguiente" />
                </LinearLayout>
            </androidx.gridlayout.widget.GridLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>