<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowColor="@color/white"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/m_50"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="iniciar_sesion"
            android:text="@string/inicia_sesion"
            android:textSize="@dimen/font_size_buttons"
            app:backgroundTint="@color/azul_claro_fondo"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:padding="@dimen/m_16"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registrarce"
            android:text="@string/registrate"
            android:textSize="@dimen/font_size_buttons"
            app:backgroundTint="@color/azul_claro_fondo"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/m_16"
            android:padding="@dimen/m_16"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>